tests/aster/x/hs/bool_chain.out

/workspace/mochi/tests/aster/x/hs/bool_chain.hs:7:8: error:
    Unexpected do block in function application:
        do print (fromEnum ((1 < 2) && (2 < 3) && (3 < 4)))
    Suggested fixes:
      • Use parentheses.
      • Perhaps you intended to use BlockArguments
  |
7 | main = do print (fromEnum ((1 < 2) && (2 < 3) && (3 < 4)))
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
